<resources>
    <string name="app_name" translatable="false">Filmoteca</string>
    <string name="TextView">Creada por: Gemma Sellés</string>
    <string name="button">Ir al sitio web</string>
    <string name="button2">Obtener soporte</string>
    <string name="button3">Volver</string>
    <string name="contentImage">Imagen de un monito</string>
    <string name="verPeliA">Ver pelicula A</string>
    <string name="verPeliB">Ver pelicula B</string>
    <string name="acercaDe">Acerca De</string>
    <string name="datosPeli">Datos de la pelicula</string>
    <string name="verPeliRel">Ver pelicula relacionada</string>
    <string name="volverPrincipal">Volver a principal</string>
    <string name="editPeli">Editar pelicula</string>
    <string name="editandoPeli">Editando pelicula</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tituloPeliA">Peli A</string>
    <string name="tituloPeliB">Peli B</string>
    <string name="tituloPeli">Titulo de la pelicula</string>
    <string name="txtEditado">editado</string>
    <string name="directorPeli">Director de la peli</string>
    <string name="anyPeli">Año de la peli</string>
    <string name="generoPeli">Genero peli</string>
    <string name="formatoPeli">Formato Peli</string>
    <string name="notasPeli">Notas de la peli</string>
    <string name="verIMDB">Ver en IMDB</string>
    <string name="captFoto">Captura fotografia</string>
    <string name="selectImg">Selecciona imagen</string>
    <string name="any">Año</string>
    <string name="enlaceIMDB">Enlace a IMDB</string>
    <string name="comentarios">Comentarios</string>
    <string name="accion">Accion</string>
    <string name="drama" translatable="false">Drama</string>
    <string name="comedia">Comedia</string>
    <string name="terror" translatable="false">Terror</string>
    <string name="scifi" translatable="false">Sci-Fi</string>
    <string name="dvd" translatable="false">DVD</string>
    <string name="blueRay" translatable="false">Blue-Ray</string>
    <string name="online">En linea</string>
    <string name="director" translatable="false">Director</string>
    <string name="anyadirPeli">Añadir Peli</string>
    <string name="home">Principal</string>
    <string name="borrarPeli">Borrar peli</string>
    <string name="multipleMenuCountSelected">seleccionadas</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="anyade_geofence">Añade geofence</string>
    <string name="elimina_geofence">Elimina geofence</string>
    <string name="user_name">Nombre</string>
    <string name="user_data">Detos del usuario</string>
    <string name="user_foto">Foto de usuario</string>
    <string name="mostrar_en_mapa">Mostrar en mapa</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="disconnect_account">Desconectar cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>